<resources>
    <string name="app_name">App</string>
    <string name="text_name">Имя: Фёдор</string>
    <string name="text_age">Возраст: 19</string>
    <string name="text_specialization">Специализация: Программирование</string>
    <string name="text_img">Фото</string>
    <string name="text_project">Проекты</string>
    <string name="text_progress">Достижения</string>
    <string name="text_profil">MyProfile</string>
</resources>