<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="185dp"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="133dp"
            android:layout_height="136dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:adjustViewBounds="true"


            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="#4A60D6" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:text="MyProfile"

            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="@string/text_profil" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="233dp"
        android:layout_marginBottom="433dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/text_name"
            android:textSize="20sp"
            tools:text="@string/text_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/text_age"
            android:textSize="20sp"
            tools:text="@string/text_age" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/text_specialization"
            android:textSize="20sp"
            tools:text="@string/text_specialization" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="17dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="316dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#002BFF"
            android:gravity="center"
            android:text="Фото"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:text="@string/text_img" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#002BFF"
            android:gravity="center"
            android:text="Проекты"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:text="@string/text_project" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#002BFF"
            android:gravity="center"
            android:text="Достижения"
            android:textColor="#F8F8F8"
            android:textSize="18sp"
            tools:text="@string/text_progress" />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="352dp"
        android:layout_height="234dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="114dp"
            android:layout_height="122dp"
            android:paddingHorizontal="2dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/img11"
            tools:srcCompat="@drawable/img11" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="116dp"
            android:layout_height="120dp"
            android:paddingHorizontal="2dp"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/img12"
            tools:srcCompat="@drawable/img12" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="116dp"
            android:layout_height="120dp"
            android:paddingHorizontal="2dp"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/img13"
            tools:srcCompat="@drawable/img13" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="116dp"
            android:layout_height="113dp"
            android:paddingHorizontal="2dp"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/img11"
            tools:srcCompat="@drawable/img11" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="116dp"
            android:layout_height="113dp"
            android:paddingHorizontal="2dp"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/img12"
            tools:srcCompat="@drawable/img12" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="116dp"
            android:layout_height="112dp"
            android:paddingHorizontal="2dp"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/img13"
            tools:srcCompat="@drawable/img13" />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>